#39 Send Page: Confirm button on web-mobile layout issue

--- a/src/app/pages/receive/receive.scss
+++ b/src/app/pages/receive/receive.scss
@@ -15,8 +15,8 @@
 
     .address {
         word-wrap: break-word;
-        font-size: 1.5rem !important;
+        font-size: 1.5rem;
         color: gray !important;
-        text-align: center !important;
+        text-align: center;
     }
 }
